Revert "Use ApplicationId instead of ApplicationInstanceReference where possible" (#27472)